--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-schema",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "private": true,
   "description": "Schema-handling utilities, including schema validators and checkers.",
   "main": "./lib/index.js",
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "objtools": "git+ssh://git@git.zipscene.com:zsapilibs/objtools.git#v0.0.10",
     "zs-error": "git+ssh://git@git.zipscene.com:zsapicore/zs-error.git#v0.0.7",
-    "zs-linter": "git+ssh://git@git.zipscene.com:zsapicore/zs-linter.git",
-    "zs-jq-stub": "git+ssh://git@git.zipscene.com:zsapilibs/zs-jq-stub.git#v0.0.1"
+    "zs-jq-stub": "git+ssh://git@git.zipscene.com:zsapilibs/zs-jq-stub.git#v0.0.1",
+    "zs-linter": "git+ssh://git@git.zipscene.com:zsapicore/zs-linter.git"
   },
   "devDependencies": {}
 }
