--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "babel-runtime": "^4.7.16",
     "lodash": "^3.5.0",
+    "pasync": "^0.2.0",
     "xerror": "^1.0.0",
     "zs-objtools": "^0.3.1"
   },
