--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "prepublish": "npm run-script build && npm run-script docs"
   },
   "dependencies": {
-    "babel-runtime": "^4.7.16",
-    "lodash": "^3.5.0",
+    "babel-runtime": "^5.0.9",
+    "lodash": "^3.6.0",
     "pasync": "^0.2.0",
     "xerror": "^1.0.0",
-    "zs-objtools": "^0.3.1"
+    "zs-objtools": "^0.3.2"
   },
   "devDependencies": {
-    "broccoli": "^0.15.0",
-    "broccoli-babel-transpiler": "^4.0.1",
-    "broccoli-cli": "0.0.1",
+    "broccoli": "^0.15.3",
+    "broccoli-babel-transpiler": "^5.0.0",
+    "broccoli-cli": "^1.0.0",
     "broccoli-merge-trees": "^0.2.1",
     "broccoli-static-compiler": "^0.2.1",
     "broccoli-wrap": "0.0.2",
-    "chai": "^2.1.2",
+    "chai": "^2.2.0",
     "es6-promise": "^2.0.1",
-    "eslint": "^0.17.1",
+    "eslint": "^0.18.0",
     "grunt": "^0.4.5",
     "grunt-broccoli": "^0.4.0",
     "grunt-cli": "^0.1.13",
