--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
 		"templateStrings": true
 	},
 	"rules": {
-		"comma-dangle": [2, "never"],
+		"comma-dangle": 2,
 		"no-cond-assign": 2,
 		"no-console": 0,
 		"no-constant-condition": 2,
@@ -106,7 +106,7 @@
 		"no-shadow-restricted-names": 2,
 		// This is disabled because eslint does not (currently) recognize class
 		// declarations as defining a symbol and throws undefined errors when
-		// referencing the class.  This really should be re-enabled after the
+		// referencing the class. This really should be re-enabled after the
 		// linter is fixed.
 		"no-undef": 0,
 		//"no-undef": 2,
@@ -121,7 +121,7 @@
 		"no-process-exit": 0,
 		"no-restricted-modules": 0,
 		"no-sync": 0,
-		"indent": [2, "tab", { "SwitchCase": 1 }],
+		"indent": [2, "tab", { "SwitchCase": 2 }],
 		"brace-style": [2, "1tbs", { "allowSingleLine": true }],
 		"camelcase": 2,
 		"comma-spacing": [2, { "before": false, "after": true }],
@@ -141,7 +141,7 @@
 		"no-multiple-empty-lines": 0,
 		"no-nested-ternary": 2,
 		"no-new-object": 0,
-		"semi-spacing": [2, { "before": false, "after": true }],
+		"semi-spacing": 2,
 		"no-spaced-func": 2,
 		"no-ternary": 0,
 		"no-trailing-spaces": 2,
