--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "common-schema",
-  "version": "1.9.3",
+  "version": "2.0.0",
   "description": "Schema-handling utilities, including schema validators and checkers.",
-  "main": "./dist/lib/index.js",
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/zipscene/common-schema.git"
@@ -15,30 +15,23 @@
   "scripts": {
     "lint": "node ./node_modules/.bin/eslint . || exit 0",
     "docs": "node ./node_modules/.bin/yuidoc .",
-    "test": "npm run-script build && node ./node_modules/.bin/mocha ./dist/test -R spec",
-    "build": "rm -rf dist && ./node_modules/.bin/broccoli build dist && rm -rf tmp",
-    "prepublish": "npm run-script build && npm run-script docs"
+    "test": "node ./node_modules/.bin/mocha ./test -R spec",
+    "prepublishOnly": "npm run-script docs"
   },
   "dependencies": {
-    "babel-runtime": "5.8.3",
-    "lodash": "^4.0.0",
-    "pasync": "^0.2.0",
-    "xerror": "^1.0.0",
-    "objtools": "^1.6.2"
+    "lodash": "^4.17.10",
+    "objtools": "^2.0.0",
+    "pasync": "^1.5.0",
+    "xerror": "^1.1.2"
   },
   "devDependencies": {
-    "broccoli": "^0.16.4",
-    "broccoli-babel-transpiler": "^5.3.1",
-    "broccoli-cli": "^1.0.0",
-    "broccoli-merge-trees": "^0.2.2",
-    "broccoli-static-compiler": "^0.2.1",
-    "broccoli-wrap": "0.0.2",
-    "chai": "^2.2.0",
-    "es6-promise": "^2.0.1",
-    "eslint": "^1.2.1",
-    "mocha": "^2.2.1",
-    "source-map-support": "^0.2.10",
-    "yuidocjs": "^0.6.0"
+    "chai": "^4.1.2",
+    "eslint": "^5.4.0",
+    "mocha": "^5.2.0",
+    "yuidocjs": "^0.10.2"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 8.0.0"
+  }
 }
